--- a/styles/structure.css
+++ b/styles/structure.css
@@ -135,6 +135,7 @@ li .company, li .institution
 
 li .tech {
     margin-top: 5px;
+    font-weight: 500;
 }
 
 li .course {
@@ -147,6 +148,7 @@ li .period, li .status {
     font-weight: bold;
     justify-content: center;
     align-items: center;
+    width: max-content;
 }
 
 #language {
